# miros

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  rustc_wrapper_script.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: claude.yml  fmt.yml
benchmarks/: alloc_stress.c  bench.h
examples/: fs_walk.c  print_deadbeef  print_deadbeef.c  pthread_basic.c  pthread_sync.c  putchar_unlocked_o2.c  signal_reactor.c  sqrt_with_libm  sqrt_with_libm.c  stdio_buffer.c  thread_dtors.c  thread_local  thread_local.c
examples/hello_world/: Cargo.toml
notes/: auxv_org_symbol_triage.md  build_infra_migration.md
src/: error.rs  global_allocator.rs  io_macros.rs  lib.rs  linked_list.rs  main.rs  page_size.rs  shared_object.rs  static_pie.rs  test_macros.rs
src/allocator/: class_region.rs  large_allocator.rs  metadata_allocator.rs  mod.rs  non_crypto_rng.rs  page_allocator.rs  primary.rs  size_classes.rs  span.rs
src/elf/: dynamic_array.rs  header.rs  mod.rs  program_header.rs  relocate.rs  section.rs  string_table.rs  symbol.rs
src/libc/: alloc.rs  auxv.rs  builtins.rs  close.rs  dl.rs  environ.rs  epoll.rs  errno.rs  eventfd.rs  interposable.rs  math.rs  mem.rs  mod.rs  open.rs  poll.rs  random.rs  sched.rs  signal.rs  syscall.rs  time.rs  write.rs
src/objects/: dependency.rs  miros.rs  mod.rs  object.rs  object_base.rs  object_data_graph.rs  object_data_map.rs  object_pipeline.rs  relocate.rs
src/start/: auxiliary_vector.rs  bootstrap.rs  environment_variables.rs  miros.rs  mod.rs
src/syscall/: exit.rs  futex.rs  mod.rs  (+1 more)
xtask/: Cargo.toml
(+97 files in other folders)
