[package]
name = "miros"
version = "0.1.0"
edition = "2021"
description = "A modern ELF interpreter (dynamic linker/loader) written in Rust"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
arbitrary-int = "2.0.0"
bitbybit = "1.4.0"

# We need a refrence to confirm our function signatures match, this method is from sunfishcode's c-ward.
libc = { version = "0.2.148", default-features = false }
