[package]
name = "miros"
version = "0.1.0"
edition = "2021"
description = "A modern ELF interpreter (dynamic linker/loader) written in Rust"
license = "MIT"

[dependencies]
arbitrary-int = "2.0.0"
bitbybit = "1.4.0"
indexmap = "2.13.0"

# We need a refrence to confirm our function signatures match, this method is from sunfishcode's c-ward.
libc = { version = "0.2.148", default-features = false }
linux-raw-sys = "0.11.0"
strum = { version = "0.27.2", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
